--- a/Chatta-mobile/Chatta/Pages/LoginPage.xaml
+++ b/Chatta-mobile/Chatta/Pages/LoginPage.xaml
@@ -3,6 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Chatta.Pages.LoginPage">
     <ContentPage.Content>
-        <Label Text="Hello Word!"  />
+        <StackLayout>
+
+            <Entry Placeholder="email"  />
+            <Entry Placeholder="Password"  />
+
+
+            <Button Text="Login"  />
+            <Button Text="Login with FB"  />
+
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
